--- a/src/AppBundle/Resources/views/Builder/deckedit.html.twig
+++ b/src/AppBundle/Resources/views/Builder/deckedit.html.twig
@@ -48,7 +48,7 @@
 			<label for="name">Name</label>
 			<input type="text" class="form-control decklist-name" name="name" value="{{ deck.name }}">
 		</div>
-	<button type="submit" class="btn btn-warning">Save</button>
+	<button type="submit" class="btn btn-success">Save</button>
 {#	<button type="submit" id="btn-save-as-copy" class="btn btn-default">Save as Copy</button> #}
 	<button type="submit" id="btn-cancel-edits" class="btn btn-link">Cancel edits</button>
 </form>
