--- a/src/AppBundle/Resources/views/Search/searchform.html.twig
+++ b/src/AppBundle/Resources/views/Search/searchform.html.twig
@@ -50,9 +50,9 @@
         <div class="form-group">
 			<div class="btn-group" data-toggle="buttons">
 			{% for faction in factions %}
-				<label class="btn btn-default active">
+				<label class="btn btn-default active" title="{{ faction.name }}" data-toggle="tooltip" data-container="body">
 					<input type="checkbox" name="f[]" checked value="{{ faction.code }}">
-					[{{ faction.code }}]
+					<span class="icon icon-{{ faction.code }}"></span>
 				</label>
 			{% endfor %}
 			</div>
@@ -310,14 +310,12 @@
 <fieldset>
 <legend>Submit</legend>
 <div class="row">
-    <div class="col-sm-12">
-        <div class="form-group">
-	       {% include 'AppBundle:Search:searchoptions.html.twig' %}
-	       <div class="col-sm-4">
-		      <button class="btn btn-primary" type="submit">Search</button>
-	       </div>
-        </div>
-     </div>
+    <div class="form-group">
+       {% include 'AppBundle:Search:searchoptions.html.twig' %}
+       <div class="col-sm-4">
+	      <button class="btn btn-primary" type="submit">Search</button>
+       </div>
+    </div>
 </div>
 </fieldset>
 </form>
