--- a/src/AppBundle/Resources/views/Builder/tab-pane-infos.html.twig
+++ b/src/AppBundle/Resources/views/Builder/tab-pane-infos.html.twig
@@ -5,7 +5,7 @@
 		<div class="form-group">
 			<label for="tags_">Tags</label>
 			<input type="text" class="form-control" name="tags_" value="{{ deck.tags }}"></input>
-			<span class="help-block">Tags are for easy filtering in your list of decks, e.g. <i>tournament</i> or <i>glacier</i>.</span>
+			<span class="help-block">Tags are for easy filtering in your list of decks, e.g. <i>competitive</i> or <i>melee</i>.</span>
 		</div>
 		<div class="form-group">
 			<label for="description_">Notes</label>
@@ -15,4 +15,3 @@
 	</div><!-- /.col-sm-12 -->
 </div><!-- /.row -->
 <!-- Notes Form -->
-    
